--- a/bibtex/gabriel-c-rau-published.bib
+++ b/bibtex/gabriel-c-rau-published.bib
@@ -528,7 +528,7 @@
   booktitle = {39th IAH Congress},
   year      = {2012},
   datespan  = {16-21 Sept 2012},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {Niagara Falls, Canada},
   name      = {39th IAH Congress},
   type      = {Conference presentation},
@@ -540,7 +540,7 @@
   booktitle = {AGU Fall Meeting},
   year      = {2013},
   datespan  = {9-13 Dec 2013},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {San Francisco, CA, USA},
   name      = {AGU Fall Meeting},
   type      = {Conference presentation},
@@ -552,7 +552,7 @@
   booktitle = {AGU Fall Meeting},
   year      = {2013},
   datespan  = {9-13 Dec 2013},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {San Francisco, USA},
   name      = {AGU Fall Meeting},
   type      = {Conference presentation},
@@ -564,7 +564,7 @@
   booktitle = {40th IAH International Convention},
   year      = {2013},
   datespan  = {15-20 Sept 2013},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {Perth, Australia},
   name      = {40th IAH International Convention},
   type      = {Conference presentation},
@@ -576,7 +576,7 @@
   booktitle = {Australian Groundwater Conference},
   year      = {2015},
   datespan  = {3 - 5 Nov 2015},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {Canberra, Australia},
   name      = {Australian Groundwater Conference},
   type      = {Conference presentation},
@@ -588,7 +588,7 @@
   booktitle = {CSIRO/NWC/NCGRT Groundwater – Surface Water Interactions Workshop},
   year      = {2012},
   datespan  = {27-28 March 2012},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {Canberra, Australia},
   name      = {CSIRO/NWC/NCGRT Groundwater – Surface Water Interactions Workshop},
   type      = {Conference presentation},
@@ -600,7 +600,7 @@
   booktitle = {Groundwater 2010},
   year      = {2010},
   datespan  = { 31 Oct - 4 Nov 2010},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {Canberra, Australia},
   name      = {Groundwater 2010},
   type      = {Conference presentation},
@@ -612,7 +612,7 @@
   booktitle = {AGU Fall Meeting 2011},
   year      = {2011},
   datespan  = {5-9th Dec 2011},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {San Francisco, USA},
   name      = {AGU Fall Meeting 2011},
   type      = {Conference presentation},
@@ -624,7 +624,7 @@
   booktitle = {AGU Fall Meeting 2011},
   year      = {2011},
   datespan  = {5-9th Dec 2011},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {San Francisco, USA},
   name      = {AGU Fall Meeting 2011},
   special   = {Invited Talk},
@@ -637,7 +637,7 @@
   booktitle = {11th Australasian Environmental Isotope Conference \& 4th Australasian Hydrogeology Research Conference},
   year      = {2011},
   datespan  = {12-14 Jul 2011},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {Cairns, Australia},
   name      = {11th Australasian Environmental Isotope Conference & 4th Australasian Hydrogeology Research Conference},
   type      = {Conference presentation},
@@ -649,6 +649,7 @@
   booktitle = {Goldschmidt 2014},
   year      = {2014},
   datespan  = {8-13 June 2014},
+  note      = {Conference presentation},
   location  = {Sacramento, California, USA},
   name      = {Goldschmidt 2014},
   type      = {Conference presentation},
@@ -661,7 +662,7 @@
   booktitle = {41st IAH International Congress},
   year      = {2014},
   datespan  = {15 - 19 September 2014},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {Marrakech, Morocco},
   name      = {41st IAH International Congress},
   type      = {Conference presentation},
@@ -674,7 +675,7 @@
   booktitle = {40th IAH International Convention},
   year      = {2013},
   datespan  = {15-20 Sept 2013},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {Perth, Australia},
   name      = {40th IAH International Convention},
   type      = {Conference presentation},
@@ -686,7 +687,7 @@
   booktitle = {2nd Australian Cotton Research Conference},
   year      = {2015},
   datespan  = {8 - 10 September 2015},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {Toowoomba, QLD, Australia},
   name      = {2nd Australian Cotton Research Conference},
   type      = {Conference presentation},
@@ -698,7 +699,7 @@
   booktitle = {American Geophysical Union Fall Meeting},
   year      = {2015},
   datespan  = {14 - 18 Dec 2015},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {San Francisco, CA, USA},
   name      = {American Geophysical Union Fall Meeting},
   type      = {Conference presentation},
@@ -710,7 +711,7 @@
   booktitle = {EGU General Assembly},
   year      = {2014},
   datespan  = {27 April - 02 May 2014},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {Vienna, Austria},
   name      = {EGU General Assembly},
   type      = {Conference presentation},
@@ -722,7 +723,7 @@
   booktitle = {Australian Groundwater Conference},
   year      = {2015},
   datespan  = {3 - 5 Nov 2015},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {Canberra, Australia},
   name      = {Australian Groundwater Conference},
   type      = {Conference presentation},
@@ -734,7 +735,7 @@
   booktitle = {38th IAH Congress},
   year      = {2010},
   datespan  = {12-17 Sept 2010},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {Krakow, Poland},
   name      = {38th IAH Congress},
   type      = {Conference presentation},
@@ -746,7 +747,7 @@
   booktitle = {AGU Fall Meeting 2011},
   year      = {2011},
   datespan  = {5-9 Dec 2011},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {San Francisco, USA},
   name      = {AGU Fall Meeting 2011},
   type      = {Conference presentation},
@@ -758,7 +759,7 @@
   booktitle = {40th IAH International Convention},
   year      = {2013},
   datespan  = {15-20 Sept 2013},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {Perth, Australia},
   name      = {40th IAH International Convention},
   type      = {Conference presentation},
@@ -770,7 +771,7 @@
   booktitle = {Cotton Catchment Communities CRC},
   year      = {2009},
   datespan  = {17-19 August 2009},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {Narrabri, Australia},
   name      = {Cotton Catchment Communities CRC},
   type      = {Conference presentation},
@@ -782,7 +783,7 @@
   booktitle = {AGU Fall Meeting},
   year      = {2011},
   datespan  = {5-9th Dec 2011},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {San Francisco, USA},
   name      = {AGU Fall Meeting},
   special   = {AGU Outstanding Student Paper Award 2011},
@@ -795,7 +796,7 @@
   booktitle = {AGU Fall Meeting},
   year      = {2012},
   datespan  = {3-7 Dec 2012},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {San Francisco, USA},
   name      = {AGU Fall Meeting},
   special   = {Invited Talk},
@@ -808,7 +809,7 @@
   booktitle = {37th IAH International Convention},
   year      = {2009},
   datespan  = {7-12 Sept 2009},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {Hyderabad, India},
   name      = {37th IAH International Convention},
   special   = {IAH Student Sponsorship Award 2009},
@@ -821,7 +822,7 @@
   booktitle = {38th IAH Congress},
   year      = {2010},
   datespan  = {12-17 Sept 2010},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {Krakow, Poland},
   name      = {38th IAH Congress},
   type      = {Conference presentation},
@@ -833,7 +834,7 @@
   booktitle = {40th IAH International Convention},
   year      = {2013},
   datespan  = {15-20 Sept 2013},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {Perth, Australia},
   name      = {40th IAH International Convention},
   special   = {Keynote Presentation},
@@ -846,7 +847,7 @@
   booktitle = {Australian Groundwater Conference},
   year      = {2015},
   datespan  = {3 - 5 Nov 2015},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {Canberra, Australia},
   name      = {Australian Groundwater Conference},
   type      = {Conference presentation},
@@ -858,7 +859,7 @@
   booktitle = {EGU General Assembly},
   year      = {2014},
   datespan  = {27 April - 02 May 2014},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {Vienna, Austria},
   name      = {EGU General Assembly},
   type      = {Conference presentation},
@@ -870,7 +871,7 @@
   booktitle = {24th Salt Water Intrusion Meeting and the 4th Asia-Pacific Coastal Aquifer Management Meeting},
   year      = {2016},
   datespan  = {4-8 July 2016},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {Carins, Australia},
   name      = {24th Salt Water Intrusion Meeting and the 4th Asia-Pacific Coastal Aquifer Management Meeting},
   type      = {Conference presentation},
@@ -882,7 +883,7 @@
   booktitle = {AGU Fall Meeting},
   year      = {2013},
   datespan  = {9-13 Dec 2013},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {San Francisco, USA},
   name      = {AGU Fall Meeting},
   type      = {Conference presentation},
@@ -894,7 +895,7 @@
   booktitle = {Climate Change: The Karst Record VII (KR7)},
   year      = {2014},
   datespan  = {29 September - 3 October 2014},
-  note      = {Oral presentation},
+  note      = {Conference presentation},
   location  = {University of Melbourne, Australia},
   name      = {Climate Change: The Karst Record VII (KR7)},
   type      = {Conference presentation},
@@ -930,6 +931,7 @@
   author    = {Rau, GC and Baker, A and Cuthbert, MO and Andersen, MS},
   title     = {Delving deep into caves can teach us about climate past and present},
   year      = {2015},
+  note      = {News item},
   publisher = {The Conversation},
   type      = {News},
   url       = {https://theconversation.com/delving-deep-into-caves-can-teach-us-about-climate-past-and-present-50122},
@@ -939,6 +941,7 @@
   author    = {Rau, GC and Kelly, B and Timms, W and Acworth, RI},
   title     = {ew research identifies a gap in sediments and questions simple groundwater models on the Liverpool Plains, NSW, Australia},
   year      = {2015},
+  note      = {News item},
   publisher = {AlphaGalileo},
   type      = {News},
   url       = {http://www.alphagalileo.org/ViewItem.aspx?ItemId=157660&CultureCode=en},
