--- a/bibtex/gabriel-c-rau-published.bib
+++ b/bibtex/gabriel-c-rau-published.bib
@@ -881,7 +881,7 @@
   year      = {2015},
   note      = {News item},
   publisher = {The Conversation},
-  type      = {News},
+  type      = {News item},
   url       = {https://theconversation.com/delving-deep-into-caves-can-teach-us-about-climate-past-and-present-50122},
 }
 
@@ -891,7 +891,7 @@
   year      = {2015},
   note      = {News item},
   publisher = {AlphaGalileo},
-  type      = {News},
+  type      = {News item},
   url       = {http://www.alphagalileo.org/ViewItem.aspx?ItemId=157660&CultureCode=en},
 }
 ﻿
