--- a/bibtex/gabriel-c-rau-published.bib
+++ b/bibtex/gabriel-c-rau-published.bib
@@ -403,7 +403,7 @@
 
 @Article{Markowska-2016,
   author    = {Markowska, Monika and Baker, Andy and Andersen, Martin S. and Jex, Catherine N. and Cuthbert, Mark O. and Rau, Gabriel C. and Graham, Peter W. and Rutlidge, Helen and Mariethoz, Gregoire and Marjo, Christopher E. and Treble, Pauline C. and Edwards, Nerilee},
-  title     = {{Semi-arid zone caves: Evaporation and hydrological controls on $\delta$18O drip water composition and implications for speleothem paleoclimate reconstructions}},
+  title     = {{Semi-arid zone caves: Evaporation and hydrological controls on δ18O drip water composition and implications for speleothem paleoclimate reconstructions}},
   journal   = {Quaternary Science Reviews},
   year      = {2016},
   date      = {2015-10-09},
@@ -643,7 +643,7 @@
 
 @Conference{Markowska-2015-conf,
   author    = {Markowska, M and Baker, AB and Andersen, MS and Jex, C and Cuthbert, MO and Rau, G and Graham, PW and Rutlidge, H and Marjo, C and Treble, PC},
-  title     = {Cave Monitoring to Determine the Controls on Î´18O From a Modern Speleothem Record in Semi-arid SE Australia},
+  title     = {Cave Monitoring to Determine the Controls on δ18O From a Modern Speleothem Record in Semi-arid SE Australia},
   booktitle = {American Geophysical Union Fall Meeting},
   year      = {2015},
   datespan  = {14 - 18 Dec 2015},
