--- a/bibtex/gabriel-c-rau-published.bib
+++ b/bibtex/gabriel-c-rau-published.bib
@@ -358,9 +358,9 @@
   journal  = {Australian Journal of Earth Sciences},
   year     = {2015},
   date     = {2015-08-10},
-  volume   = {0},
-  number   = {0},
-  pages    = {1-24},
+  volume   = {62},
+  number   = {6},
+  pages    = {657-680},
   issn     = {0812-0099},
   abstract = {The Liverpool Plains in northern New South Wales contain some of the best agricultural land in Australia and are underlain by extensive smectite clay-dominated soils sourced from weathering the alkali basalts of the Liverpool Ranges. It had been thought that a relatively simple geological model explained the underlying Cenozoic sequence with salt-rich clays of the Narrabri Formation overlying sands and gravel aquifers comprising the Gunnedah Formation. Extensive groundwater modelling based upon this simple conceptualisation has been used in management plans proposed by the mining and agricultural industries. A 31.5 m core has been recovered using minimally disturbed triple- tube coring methods at Cattle Lane (Latitude -31.52 S, Longitude 150.47 E) to resolve uncertainty concerning the aquitard status of the upper layer. Recovered core has been examined and tested to determine grainsize, cation-exchange capacity, X-ray diffraction, X-ray fluorescence and microscopic examination of granular components. These measurements complement surface and borehole geophysical techniques, hydrogeological data and hydrochemical analysis of water samples recovered from a series of specially constructed piezometers adjacent to the cored hole. The sequence overlies a Late Cretaceous channel cut into Permian bedrock at 91mdepth with sands and clays below 31.5 m considered to represent various alluvial fill events mostly occurring since the Early Pliocene. Erosion of Late Eocene alkali basalts on the Liverpool Ranges, with the formation of smectite clays, pedogenic carbonates and with the addition of quartz from both eolian sources and locally derived from adjacent Triassic sandstone hills, provides the great majority of the sediment recovered from the cores. Late Pleistocene (114 ka) to Holocene ages were determined for the core from three optically stimulated luminescence (OSL) measurements on fine sands (13, 23 and 29 m BG). Detailed examination has failed to detect any evidence of a boundary between Narrabri and Gunnedah formations revealing rather a gradual change in dominance of clays and silts over sands and gravels embedded in a clay-rich matrix. This result challenges the conceptualisation used to conduct groundwater modelling on the Liverpool Plains.},
   doi      = {10.1080/08120099.2015.1086815},
@@ -643,7 +643,7 @@
 
 @Conference{Markowska-2015-conf,
   author    = {Markowska, M and Baker, AB and Andersen, MS and Jex, C and Cuthbert, MO and Rau, G and Graham, PW and Rutlidge, H and Marjo, C and Treble, PC},
-  title     = {Cave Monitoring to Determine the Controls on δ18O From a Modern Speleothem Record in Semi-arid SE Australia},
+  title     = {monitoring to Determine the Controls on δ18O from a Modern Speleothem Record in Semi-arid SE Australia, Cave},
   booktitle = {American Geophysical Union Fall Meeting},
   year      = {2015},
   datespan  = {14 - 18 Dec 2015},
